--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,3 +3,9 @@ body {
     text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+
+.header--main {
+    color: #fff;
+    font-weight: normal;
+    font-size: 50px;
+}
