--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -31,3 +31,10 @@ body {
     color: aquamarine;
 }
 
+/* FOOTER */
+
+.footer--copyright {
+    font-size: 21px;
+    color: gray;
+    text-align: right
+}
